# RSS-XML-Firebase-Releases

./: README.md  firebase_releases.xml  generate_rss.py  pyproject.toml
.github/workflows/: update_rss_feed.yml
docs/: firebase_releases.xml  firebase_releases_admin-dotnet.xml  firebase_releases_admin-go.xml  firebase_releases_admin-java.xml  firebase_releases_admin-node.xml  firebase_releases_admin-python.xml  firebase_releases_android.xml  firebase_releases_cli.xml  firebase_releases_cpp.xml  firebase_releases_flutter.xml  firebase_releases_ios.xml  firebase_releases_js.xml  firebase_releases_security-rules.xml  firebase_releases_unity.xml
