[tool.poetry]
name = "feed-firebase-release-note"
version = "0.1.0"
description = ""
authors = ["Fumito Ito <fumito.ito@nex.nikkei.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
feedgen = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
